trunk/Archive2/49/7ae2d58275a0ce/main.cpp
#include <iostream>

using namespace std;

int main() {
  // your code goes here
  short i {999999};
  std::cout<<"value of i = " << i;
  return 0;
}